# studio2.2ndk

./: README.md
app/: build.gradle
app/src/androidTest/java/thanatos/ndkccalljava/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/thanatos/ndkccalljava/: JNI.java  MainActivity.java
app/src/main/jni/: CCallJava.c  CMakeLists.txt  thanatos_ndkccalljava_JNI.h
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/thanatos/ndkccalljava/: ExampleUnitTest.java
